# language-atlas

./: .gitignore  AGENT.md  API_GUIDE.md  CLAUDE.md  Makefile  README.md  cli.py  mypy.ini  pyproject.toml
.context/: architecture.md  commands.md  data-pipeline.md  database.md  routes.md  workflow.md
.prompts/: PROMPT_01.txt  PROMPT_02.txt  PROMPT_03.txt  PROMPT_04.txt  PROMPT_05.txt  PROMPT_06.txt  PROMPT_07.txt  PROMPT_08.txt  PROMPT_09.txt  PROMPT_10.txt  PROMPT_11.txt  PROMPT_12.txt  PROMPT_13.txt  PROMPT_14.txt  PROMPT_15.txt  PROMPT_16.txt  PROMPT_17.txt  PROMPT_18.txt  PROMPT_19.txt  PROMPT_20.txt  PROMPT_21.txt  PROMPT_22.txt  PROMPT_23.txt  PROMPT_24.txt  PROMPT_25.txt  PROMPT_26.txt  PROMPT_27.txt  PROMPT_28.txt  PROMPT_29.txt  PROMPT_30.txt  PROMPT_31.txt  PROMPT_32.txt  PROMPT_33.txt  PROMPT_34.txt  PROMPT_35.txt  PROMPT_36.txt  PROMPT_37.txt  PROMPT_38.txt  PROMPT_39.txt  PROMPT_40.txt  (+58 more)
core/: data_loader.py
data/: .dark_matter_aliases.json  .dark_matter_canonicals.json  concepts.json  core_concepts.json  eras.json  influences.json  languages.json  learning_paths.json  paradigms.json  people.json
docs/: CONCEPTS.md  CROSSROADS.md  GH_PAGES.md  MODERN_REACTIONS.md  PARADIGMS.md  PARADIGM_MATRIX.md  TIMELINE.md
generated-reports/: dark_matter_todo.json
scripts/: README.md  atlas-fuzzy.sh  audit_lineage.py  build_zenith.py  check_integrity.py  dark_matter_alias_candidates.py  dark_matter_audit.py  data_stats.py  db_query.py  export_summary.py  generate_derived_data.py  generate_docs.py  generate_reports.py  inspect_sqlite.py  prep_pages.py  (+1 more)
(+546 files in other folders)
