[project]
name = "language-atlas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "python-multipart>=0.0.22",
    "rich>=14.3.3",
    "textual>=8.2.2",
    "typer>=0.24.1",
    "uvicorn>=0.43.0",
]

[tool.pytest.ini_options]
markers = [
    "intensive: long-running analytical tests",
]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers --cov=src/app/core"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
